<resources>
    <string name="app_name">Gestión de Egresados</string>
    <string name="api_server">http://10.0.2.2:8000/api</string>
    <string name="title_activity_drawer_nav">DrawerNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_datosper">Datos Personales</string>
    <string name="menu_trayectoriaaca">Trayectoria Académica</string>
    <string name="menu_trayectoriaacaadd">Trayectoria Académica Agregar</string>
    <string name="menu_trayectoriaacaeditmaestria">Editar Maestria</string>
    <string name="menu_trayectoriaacaeditdoctorado">Editar Doctorado</string>
    <string name="menu_trayectoriapro">Trayectoria Profesional</string>
    <string name="menu_trayectoriaproadd">Trayectoria Profesional Agregar</string>
    <string name="menu_trayectoriaproedit">Trayectoria Profesional Editar</string>

    <string name="salir">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>