<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/casa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_datospro"
            android:icon="@drawable/sombrero"
            android:title="@string/menu_datosper" />
        <item
            android:id="@+id/nav_trayaca"
            android:icon="@drawable/archivo"
            android:title="@string/menu_trayectoriaaca" />
        <item
            android:id="@+id/nav_traypro"
            android:icon="@drawable/trayectoria_profesional"
            android:title="@string/menu_trayectoriapro" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir"
            android:title="@string/salir" />
    </group>
</menu>